little changes in index.html

--- a/AirQualityControlUnits/site/index.html
+++ b/AirQualityControlUnits/site/index.html
@@ -179,32 +179,35 @@
 
             </div>
         </div>
-        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">   <div class="jumbotron">
-            <h1 class="display-4">Polveri sottili</h1>
-            <p class="lead">Le polveri sottili sono gli inquinanti più frequenti nelle aree urbane, l'origine di
-                tali sostanze
-                può essere naturale o associata all'attività umana. Esse sono dannose per la salute infatti sono
-                definite
-                come la forma più pericolosa di inquinamento atmosferico, a causa della loro capacità di penetrare
-                nei
-                polmoni e nel sangue, causando quindi attacchi cardiaci, malattie respiratorie, e morte prematura.
-                In
-                particolare, risultano essere la sesta causa di morte prematura nel mondo. </p>
-            <hr class="my-4">
+        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+            <div class="jumbotron">
+                <h1 class="display-4">Polveri sottili</h1>
+                <p class="lead">Le polveri sottili sono gli inquinanti più frequenti nelle aree urbane, l'origine di
+                    tali sostanze
+                    può essere naturale o associata all'attività umana. Esse sono dannose per la salute infatti sono
+                    definite
+                    come la forma più pericolosa di inquinamento atmosferico, a causa della loro capacità di penetrare
+                    nei
+                    polmoni e nel sangue, causando quindi attacchi cardiaci, malattie respiratorie, e morte prematura.
+                    In
+                    particolare, risultano essere la sesta causa di morte prematura nel mondo. </p>
+                <hr class="my-4">
+                <p>Ecco alcuni grafici riguardati le polveri sottili:</p>
             </div>
+
             <div class="container">
                 <div class="row">
-                  <div class="col-sm">
-                    One of three columns
-                  </div>
-                  <div class="col-sm">
-                    One of three columns
-                  </div>
-                  <div class="col-sm">
-                    One of three columns
-                  </div>
+                    <div class="col-md-4 col-sm-12">
+                        One of three columns
+                    </div>
+                    <div class="col-md-4 col-sm-12">
+                        One of three columns
+                    </div>
+                    <div class="col-md-4 col-sm-12">
+                        One of three columns
+                    </div>
                 </div>
-              </div>
+            </div>
         </div>
         <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
     </div>
