--- a/AirQualityControlUnits/index.html
+++ b/AirQualityControlUnits/index.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="shortcut icon" href="./images/logo.PNG" />
     <title> AirQualityControl </title>
-    <link rel="stylesheet" type="text/css" href="/site/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="./css/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
@@ -55,7 +55,7 @@
                         <div class="col-md-6 col-sm-12">
                             <div class="card" style="width: 18rem;">
                                 <h2 class="card-title">PM10</h2>
-                                <img src="/site/images/pm10.PNG" class="card-img-top" alt="...">
+                                <img src="./images/pm10.PNG" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <p class="card-text">
                                         Sono le polveri sottili con diametro inferiore a 10 µm
@@ -111,7 +111,7 @@
 
                             <div class="card" style="width: 18rem;">
                                 <h2 class="card-title">PM2.5</h2>
-                                <img src="/site/images/pm25.jpg" class="card-img-top" alt="...">
+                                <img src="./images/pm25.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <p class="card-text">
                                         Sono polveri sottili con diametro minore a 2,5 µm
