Little changes in styles

--- a/AirQualityControlUnits/index.html
+++ b/AirQualityControlUnits/index.html
@@ -254,7 +254,7 @@
             </div>
         </div>
         <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab"><div class="jumbotron">
-            <h1 class="display-4">Le nostre centraline</h1>
+            <h1 class="display-4">Polveri sottili</h1>
             <p class="lead">Le polveri sottili sono gli inquinanti più frequenti nelle aree urbane, l'origine di
                 tali sostanze
                 può essere naturale o associata all'attività umana. Esse sono dannose per la salute infatti sono
