--- a/AirQualityControlUnits/index.html
+++ b/AirQualityControlUnits/index.html
@@ -254,19 +254,13 @@
                     reale i vari dati di:
                     <ul>
                         <li class="list">Monossido di carbonio (<span class="span-list"><b>CO</b></span>)</li>
-                        <li class="list">Biossido di zolfo (<span class="span-list"><b>SO2</b></span>)</li>
-                        <li class="list">Ossidi di azoto (<span class="span-list"><b>NO2</b></span>)</li>
+                        <li class="list">L'umidità relativa (<span class="span-list"><b>RH</b></span>)</li>
+                        <li class="list">Temperatura(<span class="span-list"><b>T</b></span>)</li>
                         <li class="list">PM10 (<span class="span-list"><b>polveri con Ø - 10 µm</b></span>)</li>
                         <li class="list">PM2,5 (<span class="span-list"><b>polveri con Ø - 2,5 µm</b></span>)</li>
-                        <li class="list">Ozono (<span class="span-list"><b>O3</b></span>)</li>
-                        <li class="list">Benzene</li>
-                        <li class="list">Benzo(a)Pirene (BaP) e altri idrocarburi policiclici aromatici (<span
-                                class="span-list"><b>IPA</b></span>)</li>
-                        <li class="list">Idrogeno solforato (<span class="span-list"><b>H2S</b></span>)</li>
-                        <span>
-                            <li class="list">
-                        </span>Metalli pesanti</li>
+                        
                     </ul>
+                    <p>Per ulteriori informazioni riguardo le nostre centraline <a href ="https://airqino.magentalab.it/#/map?idProjects=7,15,16,17,18,19,20,21,22,23,24,25,26,27,12425092,30645008,39976696,39983189,82825204,85531947,112141162,121216137,132285007,134413912,134414483,134414605,134414760,199670115" class="link" target="_blank">clicca qui</a></p>
 
 
 
