alert added on index

--- a/AirQualityControlUnits/index.html
+++ b/AirQualityControlUnits/index.html
@@ -18,8 +18,8 @@
 
 <body id="template">
 
-    <h1 id="quality">Controllo qualità dell'aria</h1>
-
+    <h1 id="site-title">Controllo qualità dell'aria</h1>
+  
     <ul class="nav nav-tabs" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
             <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
@@ -47,6 +47,7 @@
                     polmoni e nel sangue, causando quindi attacchi cardiaci, malattie respiratorie, e morte prematura.
                     In
                     particolare, risultano essere la sesta causa di morte prematura nel mondo. </p>
+                    
                 <hr class="my-4">
                 <p>Le polveri sottili sono classificate in base alla loro dimensione: </p>
 
@@ -179,7 +180,9 @@
 
 
             </div>
-
+            <div class="alert alert-primary" role="alert">
+                Ricordati di passare per il nostro <a href="https://www.magentalab.it/?lang=it" class="alert-link" target="_blank">sito</a> e per l'applicazione <a href="https://www.airqino.it/"class="alert-link"target="_blank">Airqino</a>.
+              </div>
         </div>
         <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
             <div class="jumbotron">
@@ -246,6 +249,9 @@
                     </div>
                 </div>
             </div>
+            <div class="alert alert-primary" role="alert">
+                Ricordati di passare per il nostro <a href="https://www.magentalab.it/?lang=it" class="alert-link" target="_blank">sito</a> e per l'applicazione <a href="https://www.airqino.it/"class="alert-link"target="_blank">Airqino</a>.
+              </div>
         </div>
         <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
             <div class="jumbotron">
@@ -282,6 +288,9 @@
                     width=80%; height=550px style=border:2px; allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
+            <div class="alert alert-primary" role="alert">
+                Ricordati di passare per il nostro <a href="https://www.magentalab.it/?lang=it" class="alert-link" target="_blank">sito</a> e per l'applicazione <a href="https://www.airqino.it/"class="alert-link"target="_blank">Airqino</a>.
+              </div>
         </div>
 
 
