another try about the graphs

--- a/AirQualityControlUnits/index.html
+++ b/AirQualityControlUnits/index.html
@@ -15,123 +15,10 @@
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&callback=myMap"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script type="text/javascript">
-        google.charts.load('current', {
-            'packages': ['corechart']
-        });
-        google.charts.setOnLoadCallback(drawChart);
-
-        function drawChart() {
-            var data = google.visualization.arrayToDataTable([
-                ["datatime", "media"],
-                ["2022-01-01", 2.903124988079071],
-                ["2022-01-02", 2.767391287762186],
-                ["2022-01-03", 2.6520833174387612],
-                ["2022-01-04", 2.6520833174387612],
-                ["2022-01-05", 2.6520833174387612],
-                ["2022-01-06", 2.6520833174387612],
-                ["2022-01-07", 2.767391287762186],
-                ["2022-01-08", 2.6520833174387612],
-                ["2022-01-09", 2.6520833174387612],
-                ["2022-01-10", 2.6520833174387612],
-                ["2022-01-11", 2.6520833174387612],
-                ["2022-01-12", 2.767391287762186],
-                ["2022-01-13", 2.6520833174387612],
-                ["2022-01-14", 2.6520833174387612],
-                ["2022-01-15", 2.6520833174387612],
-                ["2022-01-16", 2.6520833174387612],
-                ["2022-01-17", 2.767391287762186],
-                ["2022-01-18", 2.6520833174387612],
-                ["2022-01-19", 2.6520833174387612],
-                ["2022-01-20", 2.6520833174387612],
-                ["2022-01-21", 2.767391287762186],
-                ["2022-01-22", 2.767391287762186],
-                ["2022-01-23", 2.6520833174387612],
-                ["2022-01-24", 2.6520833174387612],
-                ["2022-01-25", 2.6520833174387612],
-                ["2022-01-26", 2.767391287762186],
-                ["2022-01-27", 2.767391287762186],
-                ["2022-01-28", 2.6107142766316733],
-                ["2022-01-29", 2.6520833174387612],
-                ["2022-01-30", 2.6520833174387612],
-                ["2022-01-31", 2.767391287762186],
-                ["2022-02-01", 2.6520833174387612],
-                ["2022-02-02", 2.6520833174387612],
-                ["2022-02-03", 2.6520833174387612],
-                ["2022-02-04", 2.6520833174387612],
-                ["2022-02-05", 2.767391287762186],
-                ["2022-02-06", 2.6520833174387612],
-                ["2022-02-07", 2.6520833174387612],
-                ["2022-02-08", 2.6520833174387612],
-                ["2022-02-09", 2.767391287762186],
-                ["2022-02-10", 2.767391287762186],
-                ["2022-02-11", 2.767391287762186],
-                ["2022-02-12", 2.6520833174387612],
-                ["2022-02-13", 2.580555544959174],
-                ["2022-02-14", 2.903124988079071],
-                ["2022-04-05", 2.903124988079071],
-                ["2022-04-06", 2.6520833174387612],
-                ["2022-04-07", 2.767391287762186],
-                ["2022-04-08", 2.767391287762186],
-                ["2022-04-09", 2.6520833174387612],
-                ["2022-04-10", 2.6520833174387612],
-                ["2022-04-11", 2.6520833174387612],
-                ["2022-04-12", 2.6520833174387612],
-                ["2022-04-13", 2.6520833174387612],
-                ["2022-04-14", 2.767391287762186],
-                ["2022-04-15", 2.6520833174387612],
-                ["2022-04-16", 2.6520833174387612],
-                ["2022-04-17", 2.6520833174387612],
-                ["2022-04-18", 2.6520833174387612],
-                ["2022-04-19", 2.6520833174387612],
-                ["2022-04-20", 2.767391287762186],
-                ["2022-04-21", 2.6520833174387612],
-                ["2022-04-22", 2.6520833174387612],
-                ["2022-04-23", 2.6520833174387612],
-                ["2022-04-24", 2.6520833174387612],
-                ["2022-04-25", 2.6520833174387612],
-                ["2022-04-26", 2.6520833174387612],
-                ["2022-04-27", 2.767391287762186],
-                ["2022-04-28", 2.6520833174387612],
-                ["2022-04-29", 2.6520833174387612],
-                ["2022-04-30", 2.5863636190241035],
-                ["2022-05-01", 2.6520833174387612],
-                ["2022-05-02", 2.6520833174387612],
-                ["2022-05-03", 2.767391287762186],
-                ["2022-05-04", 2.767391287762186],
-                ["2022-05-05", 2.6520833174387612],
-                ["2022-05-06", 2.8020833134651184],
-                ["2022-05-07", 2.6520833174387612],
-                ["2022-05-08", 2.6520833174387612],
-                ["2022-05-09", 2.6520833174387612],
-                ["2022-05-10", 2.767391287762186],
-                ["2022-05-11", 2.5812499821186066],
-                ["2022-05-12", 2.6520833174387612],
-                ["2022-05-13", 2.6520833174387612],
-                ["2022-05-14", 2.6520833174387612],
-                ["2022-05-15", 2.6520833174387612],
-                ["2022-05-16", 2.767391287762186],
-                ["2022-05-17", 2.767391287762186],
-                ["2022-05-18", 2.6520833174387612],
-                ["2022-05-19", 2.9249999863760814],
+    <script type="text/javascript" src="./script/script.js"></script>
 
 
 
-            ]);
-
-            var options = {
-                title: 'Company Performance',
-                curveType: 'function',
-                legend: {
-                    position: 'bottom'
-                }
-            };
-
-            var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
-
-            chart.draw(data, options);
-        }
-    </script>
 
 </head>
 
@@ -360,7 +247,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 col-sm-12">
-                        <div id="curve_chart" style="width: 900px; height: 500px"></div>
+                        <div id="curve_chart" style="width: 900px; height: 500px" class="graphs"></div>
+                        
+                        <div id="curve_chart1" style="width: 900px; height: 500px" class="graphs"></div>
                     </div>
                     <div class="col-md-4 col-sm-12">
                         One of three columns
