--- a/AirQualityControlUnits/index.html
+++ b/AirQualityControlUnits/index.html
@@ -248,8 +248,8 @@
                 <div class="row">
                     <div class="col-md-4 col-sm-12">
                         <div id="curve_chart" style="width: 900px; height: 500px" class="graphs"></div>
-                        
                         <div id="curve_chart1" style="width: 900px; height: 500px" class="graphs"></div>
+                        <div id="curve_chart3" style="width: 900px; height: 500px" class="graphs"></div>
                     </div>
                     <div class="col-md-4 col-sm-12">
                         One of three columns
