little changes about graphs

--- a/AirQualityControlUnits/index.html
+++ b/AirQualityControlUnits/index.html
@@ -257,7 +257,7 @@
                         <div id="curve_chart4" style="width: 100%" class="graphs"></div>
                     </div>
                     <div class="col-md-4 col-sm-12">
-
+                        <div id="line_top_x"></div>
                     </div>
                     <div class="col-md-4 col-sm-12">
 
