graphs modified and ReaderCSV created

--- a/AirQualityControlUnits/index.html
+++ b/AirQualityControlUnits/index.html
@@ -253,12 +253,12 @@
                                 style="width: 100%" class="graphs"></div>
                         </p>
 
-                        <div id="curve_chart1" style="width: 100%" class="graphs"></div>
+                      <div id="div-chart">  <div id="curve_chart1" style="width: 100%" class="graphs"></div> </div>
                         <div id="curve_chart3" style="width: 100%" class="graphs"></div>
                         <div id="curve_chart4" style="width: 100%" class="graphs"></div>
                     </div>
                     <div class="col-md-4 col-sm-12">
-                        
+                        <div id="curve_chart5" style="width: 100%" class="graphs"></div>
                     </div>
                     <div class="col-md-4 col-sm-12">
                      
