another try about graphs and reader csv

--- a/AirQualityControlUnits/index.html
+++ b/AirQualityControlUnits/index.html
@@ -261,7 +261,7 @@
                         <div id="curve_chart5" style="width: 100%" class="graphs"></div>
                     </div>
                     <div class="col-md-4 col-sm-12">
-                     
+                        <div id="number_format_chart" style="width: 100%"></div>
                     </div>
 
                 </div>
