graphs about limit exceeded improved

--- a/AirQualityControlUnits/index.html
+++ b/AirQualityControlUnits/index.html
@@ -247,7 +247,7 @@
 
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4 col-sm-12" id="graph1">
+                    <div class="col-md-6 col-sm-12" id="graph1">
 
                         <p class="title-graphs">Grafici media giornaliera dei dati:<div id="curve_chart"
                                 style="width: 100%" class="graphs"></div>
@@ -257,11 +257,13 @@
                         <div id="curve_chart3" style="width: 100%" class="graphs"></div>
                         <div id="curve_chart4" style="width: 100%" class="graphs"></div>
                     </div>
-                    <div class="col-md-4 col-sm-12">
-                        <div id="curve_chart5" style="width: 100%" class="graphs"></div>
-                    </div>
-                    <div class="col-md-4 col-sm-12">
+                    
+                    <div class="col-md-6 col-sm-12">
+                        <p class="title-graphs">Grafico giorni superamento limite:</p>
                         <div id="number_format_chart" style="width: 100%"></div>
+                        <br>
+                        <p class="title-graphs">Grafico media temperatura ed umidità:</p>
+                        <div id="curve_chart5" style="width: 100%" class="graphs"></div>
                     </div>
 
                 </div>
