beautify html,styles and script

--- a/AirQualityControlUnits/index.html
+++ b/AirQualityControlUnits/index.html
@@ -16,7 +16,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&callback=myMap"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript" src="./script/script.js"></script>
-   
+
 
 
 
@@ -253,11 +253,13 @@
                                 style="width: 100%" class="graphs"></div>
                         </p>
 
-                      <div id="div-chart">  <div id="curve_chart1" style="width: 100%" class="graphs"></div> </div>
+                        <div id="div-chart">
+                            <div id="curve_chart1" style="width: 100%" class="graphs"></div>
+                        </div>
                         <div id="curve_chart3" style="width: 100%" class="graphs"></div>
                         <div id="curve_chart4" style="width: 100%" class="graphs"></div>
                     </div>
-                    
+
                     <div class="col-md-6 col-sm-12">
                         <p class="title-graphs">Grafico giorni superamento limite:</p>
                         <div id="number_format_chart" style="width: 100%"></div>
