--- a/AirQualityControlUnits/index.html
+++ b/AirQualityControlUnits/index.html
@@ -17,7 +17,8 @@
     
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
-    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
     <script type="text/javascript" src="./script/script.js"></script>
